--- a/src/style.css
+++ b/src/style.css
@@ -31,8 +31,8 @@ h1 {
 
 #main{
 
-background-color:rgb(107, 20, 189);
-width: 60%;
+background-color:black;
+width: 30%;
 padding: 25px;
 height: 600px;
 border-radius: 15px;
