--- a/src/style.css
+++ b/src/style.css
@@ -32,6 +32,9 @@ h1 {
 #main{
 
 background-color:black;
+background: url("https://myradar.com/static/background-a089d87ba11e1a4c45a8efa960b86092.jpg");
+background-repeat: no-repeat;
+background-size: cover;
 width: 20%;
 padding: 25px;
 height: 600px;
